--- a/MyPhotos/package.json
+++ b/MyPhotos/package.json
@@ -10,22 +10,42 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/cameraroll": "^4.1.1",
+    "@react-native-community/slider": "^4.1.8",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/native-stack": "^6.2.3",
+    "fbjs": "^3.0.4",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-pressable-opacity": "^1.0.4",
+    "react-native-reanimated": "^2.3.0-beta.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
+    "react-native-static-safe-area-insets": "^2.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-vision-camera": "^2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-plugin": "^1.1.0",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.27",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-vector-icons": "^6.4.9",
+    "@types/react-native-video": "^5.0.9",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
+    "metro-config": "^0.66.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
