--- a/MyPhotos/package.json
+++ b/MyPhotos/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-modal": "^13.0.0",
     "react-native-pressable-opacity": "^1.0.4",
     "react-native-reanimated": "^2.3.0-beta.2",
     "react-native-safe-area-context": "^3.3.2",
@@ -41,6 +42,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "axios": "^0.26.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
