Fix status bar error and yellow warnings

--- a/MyPhotos/ios/MyPhotos/Info.plist
+++ b/MyPhotos/ios/MyPhotos/Info.plist
@@ -50,7 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
 
