--- a/MyPhotos/package.json
+++ b/MyPhotos/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/native-stack": "^6.2.3",
     "fbjs": "^3.0.4",
+    "native-base": "^3.3.7",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-static-safe-area-insets": "^2.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-vision-camera": "^2.12.0"
