--- a/MyPhotos/package.json
+++ b/MyPhotos/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-modal": "^13.0.0",
     "react-native-pressable-opacity": "^1.0.4",
     "react-native-reanimated": "^2.3.0-beta.2",
@@ -39,6 +40,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.27",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-image-gallery": "^2.1.1",
     "@types/react-native-vector-icons": "^6.4.9",
     "@types/react-native-video": "^5.0.9",
     "@types/react-test-renderer": "^17.0.1",
