--- a/MyPhotos/package.json
+++ b/MyPhotos/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --watch",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -34,10 +34,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.1.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.27",
     "@types/react-native": "^0.66.15",
     "@types/react-native-image-gallery": "^2.1.1",
@@ -47,27 +48,20 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "axios": "^0.26.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
+    "jest-react-native": "^18.0.0",
     "metro-config": "^0.66.2",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
